Add desktop task runtime CLI